// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="sc-caoNwh jxjNQr"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hdyzPZ dRQXpo"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo davURf"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
    <div
      className="sc-hdyzPZ bDifrM"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo cOJiyb"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-caoNwh izyAPQ"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hdyzPZ DwMkc"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo jvtuGH"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
    <div
      className="sc-hdyzPZ VBFDw"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo gcvjmH"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="sc-caoNwh jxjNQr"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-hdyzPZ bDifrM"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cOJiyb"
        dir="rtl"
        placeholder="Country"
        type="text"
      />
      <label
        className="sc-fduepK gfcqQs"
      />
    </div>
  </div>
  <div
    className="sc-hdyzPZ dRQXpo"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo davURf"
        dir="rtl"
        placeholder="Phone"
        type="text"
      />
      <label
        className="sc-fduepK gfcqQs"
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values for text field 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-caoNwh jxjNQr"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hdyzPZ dRQXpo"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo davURf"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
    <div
      className="sc-hdyzPZ bDifrM"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo cOJiyb"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
  </div>
  <span
    className="sc-glENfF jiIWYE"
    size="xsmall"
  >
    Country: 
    Estonia
  </span>
  <span
    className="sc-glENfF jiIWYE"
    size="xsmall"
  >
    Phone: 
    +372 45678901
  </span>
</div>
`;

exports[`TextInputGroup renders and allows event listeners for the select fields 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-fQbsDG dyutZU"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-bujudj eIknos"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-b5xmou-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-dwOrSJ hQuMWY"
            />
            <div
              className="sc-WywnD bufswR"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-10-placeholder"
              >
                <div
                  className="sc-kTipSN dfVCud"
                >
                  Country
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-10-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-gLZMPq"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-hSGqtg bFJqBg"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-11-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-x13ut4-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-dwOrSJ hQuMWY"
            />
            <div
              className="sc-WywnD bufswR"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-11-placeholder"
              >
                <div
                  className="sc-kTipSN dfVCud"
                >
                  Vehicle
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-11-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-11-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-gLZMPq"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="sc-glENfF jiIWYE"
    size="xsmall"
  >
    Country: 
  </span>
  <span
    className="sc-glENfF jiIWYE"
    size="xsmall"
  >
    Vehicle: 
  </span>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="sc-caoNwh jxjNQr"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-hdyzPZ dRQXpo"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo davURf"
        dir="ltr"
        placeholder="Email"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
    </div>
  </div>
  <div
    className="sc-hdyzPZ bDifrM"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo dDEEnr"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders multi select 1`] = `
<div
  className="sc-fQbsDG dyutZU"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-bujudj eIknos"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          >
            xLarge
          </div>
          <div
            className="sc-fsquOa bbgrGt"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-4-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-4-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-hSGqtg bFJqBg"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          >
            xLarge
          </div>
          <div
            className="sc-fsquOa bbgrGt"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-5-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-5-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select 1`] = `
<div
  className="sc-fQbsDG dyutZU"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-bujudj eIknos"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          />
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-2-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-hSGqtg bFJqBg"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          />
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-3-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-3-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select RTL 1`] = `
<div
  className="sc-fQbsDG dyutZU"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-bujudj eIknos"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          />
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-8-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-8-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-8-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-hSGqtg bFJqBg"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          >
            xLarge
          </div>
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-9-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-9-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-9-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select vertical 1`] = `
<div
  className="sc-fQbsDG fEwFzP"
  dir="ltr"
  orientation="vertical"
>
  <div
    className="sc-bujudj eIknos"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1rambzq-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          >
            xLarge
          </div>
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-6-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-6-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-hSGqtg bFJqBg"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-xt06d1-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-dwOrSJ hQuMWY"
          >
            xLarge
          </div>
          <div
            className="sc-WywnD bufswR"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-7-placeholder"
            >
              <div
                className="sc-kTipSN dfVCud"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-7-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-gLZMPq"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-caoNwh lHnZe"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hdyzPZ dRQXpo"
    >
      <input
        className="sc-QmDjo iqhXvX"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hdyzPZ bDifrM"
    >
      <input
        className="sc-QmDjo giOcqL"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-caoNwh lHnZe"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hdyzPZ dRQXpo"
    >
      <input
        className="sc-QmDjo kPkWIs"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hdyzPZ bDifrM"
    >
      <input
        className="sc-QmDjo iRzYoc"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-caoNwh jxjNQr"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hdyzPZ dRQXpo"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo davURf"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
    <div
      className="sc-hdyzPZ bDifrM"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo cOJiyb"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-caoNwh gggaXZ"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hdyzPZ DwMkc"
    >
      <input
        className="sc-QmDjo eswXeL"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hdyzPZ VBFDw"
    >
      <input
        className="sc-QmDjo exCkaL"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-caoNwh izyAPQ"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hdyzPZ DwMkc"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo jvtuGH"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
    <div
      className="sc-hdyzPZ VBFDw"
    >
      <div
        className="sc-joKenV bzvfAh"
      >
        <input
          className="sc-QmDjo gcvjmH"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fduepK lgGcoP"
        />
      </div>
    </div>
  </div>
</div>
`;
